text box for fill_in_vars problem type now functions more like an IDE: spaces/tabs are retained from the previous row. shift+tab is mostly working, but has a couple of minor bugs

--- a/edtech_project/static/edtech_project/style.css
+++ b/edtech_project/static/edtech_project/style.css
@@ -436,6 +436,7 @@ pre, pre code.language-python {
     position: relative;
     color: #e6fffb;
     font-family: Georgia;
+    display: none;
 }
 
 #example-image {
